--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,7 +1,11 @@
 wheel==0.23.0
-flake8==2.4.1
 tox==2.1.1
 coverage==4.0
 Sphinx==1.3.1
+
+# Code Style
+flake8==2.4.1
+
+# Requeriments for travis deployment script (travis_pypi_setup.py)
 cryptography==1.0.1
 PyYAML==3.11
