--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,11 +1,23 @@
-wheel==0.23.0
-tox==2.1.1
-coverage==4.0
-Sphinx==1.3.1
+# Everything the developer needs in addition to the production requirements
 
-# Code Style
-flake8==2.4.1
+# Fundamental Python packages
+setuptools==19.2
+pip==7.1.2
+wheel==0.26.0
+
+# Code quality
+tox==2.1.1
+coverage==4.0.3
+
+# Doc
+Sphinx==1.3.3
+
+# Code style
+flake8==2.5.1
 
 # Requeriments for travis deployment script (travis_pypi_setup.py)
 cryptography==1.0.1
 PyYAML==3.11
+
+# Prod requirements
+-r requirements_prod.txt
