Setuping python envs for travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 # Config file for automatic testing at travis-ci.org
 # This file will be regenerated if you run travis_pypi_setup.py
 
+sudo: false
+
 language: python
 
 python:
@@ -11,17 +13,25 @@ python:
   - "3.5"
 
 env:
-  - TOXENV=py26
-  - TOXENV=py27
-  - TOXENV=py33
-  - TOXENV=py34
-  - TOXENV=py35
+  - REQUIREMENTS=lowest
+  - REQUIREMENTS=release
+  - REQUIREMENTS=devel
+
+matrix:
+  exclude:
+    # Flask: Python 3 support currently does not work with lowest requirements
+    - python: "3.3"
+      env: REQUIREMENTS=lowest
+    - python: "3.4"
+      env: REQUIREMENTS=lowest
+    - python: "3.5"
+      env: REQUIREMENTS=lowest
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -U tox
+install: pip install tox
 
 # command to run tests, e.g. python setup.py test
-script: tox
+script: tox -e py-$REQUIREMENTS
 
 # After you create the Github repo and add it to Travis, run the
 # travis_pypi_setup.py script to finish PyPI deployment setup
