Setuping python envs for travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,8 @@ matrix:
 install: pip install tox
 
 # command to run tests, e.g. python setup.py test
-script: tox -e py-$REQUIREMENTS
+script:
+    - tox -e py-$REQUIREMENTS
 
 # After you create the Github repo and add it to Travis, run the
 # travis_pypi_setup.py script to finish PyPI deployment setup
