--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,8 @@
 [tox]
-envlist = py26, py27, py33, py34, py35
+envlist = {py26,py27}-{lowest,release,devel}, {py33,py34,py35}-{release,devel}
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/anerp
+
 commands = python setup.py test
 
 ; If you want to make tox run the tests with the same versions, create a
