--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,16 @@
 [tox]
-envlist = {py26,py27}-{lowest,release,devel}, {py33,py34,py35}-{release,devel}
+envlist =
+    {py26,py27}-{lowest,release,devel}, {py33,py34,py35}-{release,devel}, cover
 
 [testenv]
 
-commands = python setup.py test
+commands = py.test
 
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following lines:
-; deps =
-;     -r{toxinidir}/requirements.txt
+[testenv:cover]
+deps =
+    pytest
+    coverage
+commands =
+    coverage erase
+    coverage run -m py.test
+    coverage report --show-missing
