--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py26,py27}-{lowest,release,devel}, {py33,py34,py35}-{release,devel}, cover
+    {py26,py27}-{lowest,release,devel}, {py33,py34,py35}-{release,devel}, cover, pep8
 
 [testenv]
 
@@ -14,3 +14,11 @@ commands =
     coverage erase
     coverage run -m py.test
     coverage report --show-missing
+
+[testenv:pep8]
+deps =
+    flake8
+    flake8-import-order
+    pep8-naming
+commands =
+    flake8 --show-source --verbose --count
