Missing debug toolbar dependence.

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ deps =
     coverage
     WebTest
     factory-boy
+    Flask-DebugToolbar
 commands =
     coverage erase
     coverage run -m py.test
