Fixing tox dependences.

--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,14 @@ envlist =
     {py26,py27}-{lowest,release,devel}, {py33,py34,py35}-{release,devel}, cover
 
 [testenv]
-
-commands = py.test
+deps =
+    pytest
+    coverage
+    WebTest
+    factory-boy
+    Flask-DebugToolbar
+commands =
+    py.test
 
 [testenv:cover]
 deps =
