Fixing tox dependences.

--- a/tox.ini
+++ b/tox.ini
@@ -4,21 +4,13 @@ envlist =
 
 [testenv]
 deps =
-    pytest
-    coverage
-    WebTest
-    factory-boy
-    Flask-DebugToolbar
+    -r{toxinidir}/requirements/test.txt
 commands =
     py.test
 
 [testenv:cover]
 deps =
-    pytest
-    coverage
-    WebTest
-    factory-boy
-    Flask-DebugToolbar
+    -r{toxinidir}/requirements/test.txt
 commands =
     coverage erase
     coverage run -m py.test
