--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,6 +1,8 @@
 # Makefile for Sphinx documentation
 #
 
+PROJECT_SLUG  = anerp
+
 # You can set these variables from the command line.
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
@@ -85,17 +87,17 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/anerp.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/$(PROJECT_SLUG).qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/anerp.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/$(PROJECT_SLUG).qhc"
 
 devhelp:
 	$(SPHINXBUILD) -b devhelp $(ALLSPHINXOPTS) $(BUILDDIR)/devhelp
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $$HOME/.local/share/devhelp/anerp"
-	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/anerp"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/$(PROJECT_SLUG)"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/$(PROJECT_SLUG)"
 	@echo "# devhelp"
 
 epub:
