--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,10 +4,9 @@ include LICENSE
 include README.rst
 include requirements.txt
 
+recursive-include docs conf.py Makefile make.bat *.rst
+recursive-include requirements *
 recursive-include tests *
+
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
-
-recursive-include docs *.rst conf.py Makefile make.bat
-
-recursive-include requirements *
