--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,8 @@ include CONTRIBUTING.rst
 include LICENSE
 include README.rst
 include requirements.txt
+include tox.ini
+
 
 recursive-include docs conf.py Makefile make.bat *.rst
 recursive-include requirements *
